test/parser/should_succeed/main3.souc
import Module

main() = do
	print "hello world"
