test/parser/should_fail/import3.souc
import BadCapital

main() = do
	print "bad capital Import"
